--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
       </ul>
     </nav>
   </header>
+  <div class="greeting"> ¡Bienvenido! </div>
     <div class="container">
       <h1>Acerca de</h1>
       <p>¡Bienvenido a nuestra página “Acerca de”! Aquí, aprenderás más sobre nuestra empresa y los servicios que ofrecemos.</p>
